# MaanaimManager

./: .dockerignore  .env  .env.example  .env.v2.example  .gitignore  AGENTS.md  Dockerfile  EVENTA_MVP.md  IMPLEMENTACAO_RESUMO.md  README.md  SECURITY.md  docker-compose.v2.yml  docker-compose.yml  infos.txt  requirements.txt  sistema maanaim.html
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: __init__.py  env.py
backend/alembic/versions/: 0001_baseline.py  0002_fase_a_pos_estoque_config.py  0003_caixa_turno.py  0004_permissions.py  0005_integridade_estoque_pdv.py  0006_inventory_fornecedor_criado_em_default.py  0007_pos_local_criado_em.py  0008_pos_locais_globais.py  0009_add_turno_caixa_pos.py  0010_add_volunteers.py  __init__.py
backend/app/: __init__.py  config.py  main.py
backend/app/auth/: __init__.py  dependencies.py  jwt.py  passwords.py  routers.py  schemas.py  scopes.py
backend/app/core/: __init__.py  models.py  routers.py  schemas.py  services.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/finance/: __init__.py  models.py  routers.py  schemas.py  services.py
backend/app/inventory/: __init__.py  models.py  routers.py  schemas.py  services.py
backend/app/lodging/: __init__.py  models.py  routers.py  schemas.py  services.py
backend/app/middleware/: __init__.py  audit.py  inactivity.py
backend/scripts/: seed_admin.py  seed_products_families.py  verify_schema.py
backend/tests/: test_evento_operations.py  test_pos_integrity.py  test_pos_turno.py
caddy/: Caddyfile  (+2 more)
(+279 files in other folders)
